# cookiecutter-py-aoc

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: main.yml  on-release-main.yml
cookiecutter_py_aoc/: cli.py
hooks/: post_gen_project.py
tests/: test_cookiecutter.py  utils.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.sh
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __main__.py  runner.py  template.py  utils.py
