[project]
name = "cookiecutter-py-aoc"
version = "0.0.1"
description = "A modern cookiecutter template for Advent of Code Python projects, using uv/ruff/mypy tooling."
authors = [{ name = "lee Skillen", email = "lskillen@users.noreply.github.com" }]
readme = "README.md"
keywords = ["cookiecutter", "template", "adventofcode", "python", "py", "aoc"]
requires-python = ">=3.9,<4.0"
dependencies = [
  "cookiecutter>=2.1.1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]


[project.urls]
Repository = "https://github.com/lskillen/cookiecutter-py-aoc/"
Documentation = "https://lskillen.github.io/cookiecutter-py-aoc/"
Homepage = "https://lskillen.github.io/cookiecutter-py-aoc/"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-cookies>=0.6.1",
    "deptry>=0.20.0",
    "mypy>=0.991",
    "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cookiecutter_py_aoc"]

[tool.setuptools.package-data]
"cookiecutter_py_aoc" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["cookiecutter_py_aoc"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.deptry]
extend_exclude = []

[tool.deptry.per_rule_ignores]
DEP002 = ["cookiecutter"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"**/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
